[package]
name = "branchyard"
version = "0.1.0"
edition = "2021"
description = "Paired Git Worktrees CLI — create isolated environments for multiple repos simultaneously"
license = "MIT"
repository = "https://github.com/pablogravielseo/branchyard"
readme = "README.md"
keywords = ["git", "worktree", "cli", "docker", "development"]

[[bin]]
name = "branchyard"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
git2 = { version = "0.19", features = ["vendored-openssl"] }
indicatif = "0.17"
inquire = "0.7"
owo-colors = "4"
tabled = "0.15"
anyhow = "1"
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[workspace.metadata.dist]
cargo-dist-version = "0.22.1"
ci = "github"
installers = ["shell"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]
install-path = "CARGO_HOME"
